Fixed spacing of list items

--- a/themes/schmopera/assets/sass/_post-single.scss
+++ b/themes/schmopera/assets/sass/_post-single.scss
@@ -303,7 +303,7 @@
 
   ol li,
   ul li {
-    margin: 1.5em 0;
+    // margin: 1.5em 0;
   }
 
   .nospace li,
